k8s/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: dealer-web
spec: {}
status: {}
