k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dealerweb
  name: dealerweb
  # namespace: dealer-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dealerweb
  strategy: {}
  template:
    metadata:
      labels:
        app: dealerweb
    spec:
      containers:
      - image: opas/b2bdealer-ui:latest
        name: b2bdealer-ui
        imagePullPolicy: Always
        resources: {}
status: {}
