k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dealerweb
  name: dealerweb
  # namespace: dealer-web
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dealerweb
  type: ClusterIP
status:
  loadBalancer: {}
