k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: dealerweb
  namespace: dealer-web
spec:
  rules:
  - host: b2b.ppsuperwheels.com
    http:
      paths:
      - backend:
          service:
            name: dealerweb
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
